(Mac)Views: Widgets focus first View in traversal order if initial focus fails.

views::Widgets use SetInitialFocus(), which calls
WidgetDelegate::GetInitiallyFocusedView() to set focus to a View on first
opening the Widget. In cases where GetInitiallyFocusedView() returns an
unfocusable View, the call to RequestFocus() silently fails and the Widget is
opened without focus on anything.

In particular, this is happening on MacViews when full keyboard access is turned
off. Support for full keyboard access was implemented in r391744, but
DialogDelegate::GetInitiallyFocusedView() still returns the dialog's default
button regardless of full keyboard access. This results in the dialog opening
with nothing focused.

Fix this in general for all views::Widgets trying to focus an unfocusable View -
if the View returned by WidgetDelegate::GetInitiallyFocusedView() isn't able to
become focused and no other View has focus, manually advance focus on the focus
manager instead.

BUG=657850
TEST=On Mac with #secondary-ui-md flag enabled and full keyboard access turned
off (System Preferences > Keyboard > Shortcuts, make sure 'All controls' radio
button is not selected), open the collected cookies dialog by going to
google.com, clicking 'Secure' on the left of the omnibox, and clicking 'X in
use' under 'Cookies'. The TreeView should have focus.

Review-Url: https://codereview.chromium.org/2604303002
Cr-Commit-Position: refs/heads/master@{#443827}

Former-commit-id: 7d47709bf1d00beaa556804b25300ebdceecca07